# github-scraping-agent-ai

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.json  prompt.example.md  prompt.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  secret.yaml
src/: cache.py  config.py  discord.py  github.py  main.py  prompt.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
tests/: test_cache.py  test_config.py  test_discord.py  test_github.py  test_llm_anthropic.py  test_llm_base.py  test_llm_factory.py  test_llm_google.py  test_llm_openai.py  test_main.py  test_prompt.py
